--- a/static/styles.css
+++ b/static/styles.css
@@ -274,6 +274,19 @@ canvas {
     background-color: rgba(0, 0, 0, 0.3);
 }
 
+a {
+    color: inherit;
+}
+
+a:visited {
+    color: inherit;
+}
+
+a:active {
+    color: inherit;
+    filter: brightness(0.9);
+}
+
 @keyframes popin {
     from {
         right: 30px;
