--- a/templates/game.html
+++ b/templates/game.html
@@ -16,8 +16,8 @@
     </div>
 
     <div id="podiumSection" style="display: none; flex-direction: column; align-items: center; justify-content: center;">
-        <h1>See the results on the big screen!</h1>
-        <p>You have received a total of <span id="podiumPoints">?</span> points!</p>
+        <h1>See all results on the big screen</h1>
+        <p>You have scored a total of <span id="podiumPoints">?</span> points!</p>
     </div>
 
     <div id="drawingSection" style="display:none;">
