--- a/templates/already_begun.html
+++ b/templates/already_begun.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block content %}
 	<h1>Oh, no!</h1>
-    <p>The game has already begun. You cannot rejoin while the game is still running.</p>
+    <p>The game has already begun. You cannot rejoin while the game is running.</p>
 {% endblock %}
