better way of setting already begun

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -29,6 +29,7 @@
         let drawTimer = {{ globals.timer_max }};
 
         continueButton.addEventListener("click", async (event) => {
+            socket.emit("set_already_begun", true);
             if (currentRound === 6) {
                 socket.emit("show_podium");
                 return;
