--- a/static/styles.css
+++ b/static/styles.css
@@ -287,6 +287,10 @@ a:active {
     filter: brightness(0.9);
 }
 
+#slideImage {
+    height: 90vh;
+}
+
 @keyframes popin {
     from {
         right: 30px;
