--- a/templates/admin.html
+++ b/templates/admin.html
@@ -36,12 +36,15 @@
             }
 
             if (roundProgress === 0) {
-                socket.emit('set_page', "draw");
+                socket.emit('set_page', `slide-${currentRound}`);
                 roundProgress = 1;
             } else if (roundProgress === 1) {
+                socket.emit('set_page', "draw");
+                roundProgress = 2;
+            } else if (roundProgress === 3) {
                 socket.emit('request_drawings');
                 socket.emit('set_page', "rating");
-                roundProgress = 2;
+                roundProgress = 4;
             } else {
                 await fetch("/next_round");
                 await freshData();
