--- a/templates/game.html
+++ b/templates/game.html
@@ -3,6 +3,8 @@
     <div id="username"><p>{{ username }}</p></div>
     <div id="timer" style="display: none">30</div>
 
+    <img id="slideImage" style="display: none">
+
     <div id="noneSection">
         <h1 id="noneTitle">You're in!</h1>
         <p>Please wait for further instructions</p>
@@ -153,6 +155,7 @@
         const podiumPoints = document.getElementById('podiumPoints');
         const noneTitle = document.getElementById('noneTitle');
         const timerElement = document.getElementById("timer");
+        const slideImage = document.getElementById("slideImage");
         let drawing = false;
         let currentColor = "#000000";
         let brushSize = 5;
@@ -185,8 +188,16 @@
 
         socket.on('set_page', (page) => {
             currentPage = page;
+            slideImage.style.display = "none";
 
-            if (page === "draw") {
+            if (page.startsWith("slide-")) {
+                noneSection.style.display = "none";
+                ratingSection.style.display = "none";
+                timerElement.style.display = "none";
+                drawingSection.style.display = "none";
+                slideImage.style.display = null;
+                slideImage.src = `/static/slides/${page.split('-')[1]}.png`;
+            } else if (page === "draw") {
                 drawingStartTime = Date.now();
                 noneSection.style.display = "none";
                 ratingSection.style.display = "none";
