--- a/templates/monitor.html
+++ b/templates/monitor.html
@@ -7,12 +7,15 @@
         <div id="clients">
 
         </div>
+
+        <div id="ratingSectionImages" style="flex-direction: column; position: absolute; top: 500px;"></div>
     </div>
 
     <script type="text/javascript">
         let socket = io();
         const connectionsElement = document.querySelector('#connections');
         const clientsElement = document.querySelector('#clients');
+        const ratingSectionImages = document.querySelector("#ratingSectionImages");
 
         async function freshData() {
             const resp = await fetch("/gamedata?key={{ globals.key }}");
@@ -25,6 +28,20 @@
                 await addClient(username);
             }
         }
+
+        socket.on('rating_data', data => {
+            ratingSectionImages.innerHTML = "";
+
+            for (let user of data['users']) {
+                ratingSectionImages.innerHTML += `<img draggable=false src='/drawing/${user}?t=${Date.now()}'/><a onclick='kick("${user}")' href='#'><div style='flex-direction: row'>Kick user</a><button>1/3</button><button>2/3</button><button>3/3</button></div><hr/>`
+            }
+        });
+
+        socket.on('set_page', page => {
+            if (page === "draw") {
+                ratingSectionImages.innerHTML = "";
+            }
+        });
 
         socket.on('client_connected', (amount) => {
             connectionsElement.innerText = amount;
@@ -48,6 +65,10 @@
             connectionsElement.innerText = data['amount'];
             document.getElementById('client-' + data['username']).remove();
         });
+
+        function kick(username) {
+            socket.emit('kick', username);
+        }
 
         freshData();
     </script>
