--- a/templates/admin.html
+++ b/templates/admin.html
@@ -15,6 +15,15 @@
             <img id="slideImageImage">
             <button style="position: absolute; bottom: 20px; right: 20px" id="otherContinue">Continue</button>
         </div>
+        <div id="podium" style="display: none">
+            <div id="podium2"><div style="text-align: center"><p><span id="podium2-points">?</span> points</p><h2>2nd</h2></div></div>
+            <div id="podium3"><div style="text-align: center"><p><span id="podium3-points">?</span> points</p><h2>3rd</h2></div></div>
+            <div id="podium1"><div style="text-align: center"><p><span id="podium1-points">?</span> points</p><h2>1st</h2></div></div>
+
+            <p id="winner-p1">Name</p>
+            <p id="winner-p2">Name</p>
+            <p id="winner-p3">Name</p>
+        </div>
     {% endif %}
 
 
