--- a/static/styles.css
+++ b/static/styles.css
@@ -295,6 +295,105 @@ a:active {
     height: 90vh;
 }
 
+#podium {
+    position: absolute;
+    height: 100vh;
+    width: 99vw;
+}
+
+#podium1 {
+    display: flex;
+    justify-content: center;
+    padding-top: 15px;
+
+    position: absolute;
+    bottom: 0;
+    width: 200px;
+    background-color: rgb(115 4 167);
+    height: 400px;
+    left: calc(50vw);
+    box-shadow: 0 5px 30px black;
+
+}
+
+#podium2 {
+    display: flex;
+    justify-content: center;
+    padding-top: 15px;
+
+    position: absolute;
+    bottom: 0;
+    width: 200px;
+    background-color: rgb(115 4 167);
+    height: 320px;
+    left: calc(50vw - 210px);
+    box-shadow: 0 5px 30px black;
+}
+
+#podium3 {
+    display: flex;
+    justify-content: center;
+    padding-top: 15px;
+
+    position: absolute;
+    bottom: 0;
+    width: 200px;
+    background-color: rgb(115 4 167);
+    height: 250px;
+    left: calc(50vw + 210px);
+    box-shadow: 0 5px 30px black;
+}
+
+#winner-p1 {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 430px;
+    width: 200px;
+    left: calc(50vw);
+    font-size: 26px;
+    animation: 1.5s podium-text infinite;
+}
+
+#winner-p2 {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 350px;
+    width: 200px;
+    left: calc(50vw - 210px);
+    font-size: 22px;
+    animation: 1.5s podium-text infinite;
+}
+
+#winner-p3 {
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 280px;
+    width: 200px;
+    left: calc(50vw + 210px);
+    font-size: 20px;
+    animation: 1.5s podium-text infinite;
+}
+
+@keyframes podium-text {
+    0% {
+        transform: translateX(10px);
+        rotate: 10deg;
+    }
+
+    50% {
+        transform: translateX(-10px);
+        rotate: -10deg;
+    }
+
+    100% {
+        transform: translateX(10px);
+        rotate: 10deg;
+    }
+}
+
 @keyframes popin {
     from {
         right: 30px;
