--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,18 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
             integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
             crossorigin="anonymous"></script>
+
+    <link rel="preload" href="/static/slides/1.png" as="image">
+    <link rel="preload" href="/static/slides/2.png" as="image">
+    <link rel="preload" href="/static/slides/3.png" as="image">
+    <link rel="preload" href="/static/slides/4.png" as="image">
+    <link rel="preload" href="/static/slides/5.png" as="image">
+
+    <link rel="preload" href="/static/answer/1.png" as="image">
+    <link rel="preload" href="/static/answer/2.png" as="image">
+    <link rel="preload" href="/static/answer/3.png" as="image">
+    <link rel="preload" href="/static/answer/4.png" as="image">
+    <link rel="preload" href="/static/answer/5.png" as="image">
 </head>
 <body>
 <div class="content">
